# aerospace-agro-ndvi

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  urls.py
core/: config.py  credentials.py
db/: __init__.py  connection.py  models.py
fields/: api.py  schemas.py  services.py
migrations/: env.py
migrations/versions/: 239a17031e4c_initial.py  918ff90d2ca5_fields.py  922dc9c7944f_initial.py
