[tool.poetry]
name = "aerospace_agro"
version = "0.1.0"
description = ""
authors = ["Anton <s.anton@live.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
python-dotenv = "^0.20.0"
sentinelsat = "^1.1.1"
ormar = {extras = ["postgresql"], version = "^0.11.0"}
alembic = "^1.8.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
